Add a workaround for reinitializing rotation/mirroring options after reloading the preset

Ideally, we should not store this data in the preset itself. Then we
would not need these hacks. But we store it...

BUG:392622